# 2024-fall-cpp_lab

./: .gitignore  README.md
Lab1/Lab1-1/: go.sh
Lab1/Lab1-1/grammar/: SafeCLexer.g4  SafeCLexer.interp  SafeCLexer.java  SafeCLexer.tokens  SafeCParser.g4  SafeCParser.interp  SafeCParser.java  SafeCParserBaseListener.java  SafeCParserListener.java
Lab1/Lab1-1/output/: 0.c.output  1.c.output  10.c.output  11.c.output  12.c.output  13.c.output  14.c.output  15.c.output  16.c.output  17.c.output  18.c.output  19.c.output  2.c.output  3.c.output  4.c.output  5.c.output  6.c.output  7.c.output  8.c.output  9.c.output
Lab1/Lab1-1/tests/: 15.c  19.c
Lab1/Lab1-2/: CMakeLists.txt  Makefile  SafeCLexer.g4  SafeCParser.g4  cmake_install.cmake  compile_commands.json  demo.sh  go.sh  main.cpp  output.txt
Lab1/Lab1-2/demo/: output.txt  simple.c
Lab1/Lab1-2/include/: AstBuilder.h  AstNode.h  AstNode_Visitor.h  AstSerializer.h
Lab1/Lab1-2/src/: AstBuilder.cpp  Utils.h
Lab1/Lab1-2/test_from_lab2/: test.c
Lab1/Lab1-submit/: main.cpp
Lab1/Lab1-submit/include/: AstNode.h
Lab2/: CMakeLists.txt  Makefile  check.py  plus.py
Lab2/Lab2/: Makefile  check.py  compile_commands.json  debug  main.cpp
Lab2/Lab2-submit/: SafeCLexer.g4  SafeCParser.g4  readme.txt
Lab2/Lab2-submit/include/: AstBuilder.h  AstNode_Visitor.h  SafeCIRBuilder.h
Lab2/Lab2-submit/runtime/: io.h
Lab2/Lab2-submit/src/: SafeCIRBuilder.cpp
Lab2/Lab2/example/: example.ll
Lab2/Lab2/misc/: 13.c  SafeCIRBuilder.cpp  array_init_test_ir.c  input_test.c  local_var_test.c  obc_check.txt  obc_check_array_lval_test.c  trick.c
Lab2/Lab2/src/: AstBuilder.cpp  AstNode_Visitor.cpp  SafeCIRBuilder.cpp  SafeCIRBuilder.cpp.bak2  Utils.h
Lab2/Lab2/tests/: array_init_2.c  array_unobc_overflow.c  (+10 more)
Lab2/cmake/: ExternalAntlr4Cpp.cmake
Lab2/example/: build_example.cpp  example.c
Lab2/include/: SafeCIRBuilder.h
Lab2/misc/: array_lval_test.c  global_array_test.c
Lab2/runtime/: runtime.cpp  runtime.h
Lab2/src/: AstBuilder.cpp  SafeCIRBuilder.cpp  SafeCIRBuilder.cpp.bak  Utils.h
Lab2/tests/: array_init_1.c  array_init_2.c  array_init_3.c  array_obc.c  global_var_array_const_obc_1.c  global_var_array_init_2.c  global_var_const.c  if.c  recursive_func.c  trick.c  var_def_2.c  while.c
Lab3/Lab3/: CMakeLists.txt  Makefile  compile_commands.json  main.cpp  output.txt
Lab3/Lab3/include/: AstNode.h  ConstantPropagator.h  Dataflow.h  SafeCIRBuilder.h
Lab3/Lab3/liveness_example/: CMakeLists.txt  LLVMAssignment.cpp  Liveness.h  test.bc  test.c
Lab3/Lab3/misc/: Lab3.md
Lab3/Lab3/runtime/: io.cpp  runtime.cpp  runtime.h
Lab3/Lab3/src/: AstBuilder.cpp  AstNode_Visitor.cpp  ConstantPropagator.cpp  Dataflow.cpp  SafeCIRBuilder.cpp  Utils.h
Lab3/Lab3/tests/: 1.c  10.c  11.c  12.c  14.c  15.c  16.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  todo.c
doc/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  main.xdv
doc/_minted-main/: 11646F33C14C13E08CB7BF92FB3DACD33DC44E98B1142996A9F0E7878F3DDD1C.pygtex  2D2E646094E3AE30EEC4BB4EEEFF40F87672CF206462F364195D6E1D9DF6CA65.pygtex  359FFACFA4B28E27738A352991C46ED67672CF206462F364195D6E1D9DF6CA65.pygtex  456B61459E65268CD4296199E80171A67672CF206462F364195D6E1D9DF6CA65.pygtex  7C3FA41BB1587CF7D19731A820680A2C7672CF206462F364195D6E1D9DF6CA65.pygtex  983F30D6701E63043FC61E0226CEB9877672CF206462F364195D6E1D9DF6CA65.pygtex  D13FFD91FF1C8F8B084EE1B8867D632D7672CF206462F364195D6E1D9DF6CA65.pygtex  DF4E0728747B9EB675FB46504B8E6E8B7672CF206462F364195D6E1D9DF6CA65.pygtex
doc/section/: s1.tex  s2.tex
(+314 files in other folders)
